[package]
name = "tabbycat"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "A rust crate for generating graph scripts with dot language"
categories = ["visualization", "graphics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anyhow = "1"
derive_builder = "0.9"

[features]
attributes = []

[package.metadata.docs.rs]
features = ["attributes"]

