[package]
name = "tabbycat"
version = "0.1.2"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "A rust crate for generating graph scripts with dot language"
categories = ["visualization", "graphics"]
readme = "README.md"
keywords = ["dot", "graphviz", "visual","render"]
repository = "https://github.com/SchrodingerZhu/tabbycat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anyhow = "1"
derive_builder = "0.9"

[features]
attributes = []

[package.metadata.docs.rs]
features = ["attributes"]

